package org.example;

public class BookProduct {
}
