package org.example;

public class FreeProduct {
}
