package org.example;

public class Product {


    public String getName() {
        return "manzana";
    }

    public double getPrice() {
        return 2.3;
    }

    public double getPriceWithoutDiscount() {
        return getPrice();
    }
}
